<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">PIC32 SPP Voice Control</string>
    <string name="action_settings">Settings</string>

    <!--  BluetoothActivity -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Exiting</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="pair_connect">Pair and Connect a device</string>
    <string name="about">About</string>
    <string name="app_header">PIC32 SPP</string>
    
    <!-- LED Fragment -->
    <string name="button_led1">LED1</string>
    <string name="button_led2">LED2</string>
    <string name="button_led3">LED3</string>
    <string name="button_led4">LED4</string>
    <string name="led">LED</string>
    <string name="rename_bt">Name Bluetooth Device</string>
    <string name="enter_led_id">Enter LED Number(0~31)</string>
    <string name="enter_bt_name">Enter Bluetooth Device Name</string>
    <string name="audio_track">Audio Track Name</string>
    
    <!-- Reprogram Fragment -->
    <string name="button_choose">Choose File</string>
    <string name="noitem_icon_desc">No items icon</string>
    <string name="choosed_file">Choosed File:</string>
    
    <!-- TabHostActivity -->
    <string name="file_downloading">file is downloading</string>
    
    <!-- FileExplorer -->
    <string name="sdcard_dir">/sdcard/</string>


    <!-- VoiceCommands -->
    <string name="all_light_on">Light On:</string>
    <string name="all_light_off">Light Off:</string>
    <string name="voice_cmd1_desc">Turns on all virtual lights on board display</string>
    <string name="voice_cmd2_desc">Turns off all virtual lights on board display</string>
    <string name="voice_cmd3_desc">Turns on virtual LED 1 on board display</string>
    <string name="voice_cmd4_desc">Turns on virtual LED 2 on board display</string>
</resources>
