<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
 >

    <TextView
        android:id="@+id/cmdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Voice Commands:"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/voiceCmdLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cmdText"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_cmd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/all_light_on"
                android:textSize="18dip" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voice_cmd1_desc"
                android:textColor="@color/cmd_desc_color"
                android:textSize="16sp" />

            <!-- range [0,31] -->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cmd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_cmd1"
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/all_light_off"
                android:textSize="18dip" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voice_cmd2_desc"
                android:textColor="@color/cmd_desc_color"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cmd3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_cmd2"
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Play:"
                android:textSize="18dip" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voice_cmd3_desc"
                android:textColor="@color/cmd_desc_color"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cmd4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_cmd3"
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Pause:"
                android:textSize="18dip" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voice_cmd4_desc"
                android:textColor="@color/cmd_desc_color"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/voiceCMDRecogText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/voiceCmdLL"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:text="Voice CMD recognized:"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/cmdRecogText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/voiceCMDRecogText"
        android:layout_centerInParent="true"
        android:text="Light on"
        android:textSize="24sp" />
</RelativeLayout>